Adicionado hangfire para finalizar as filas com mais de 3 horas.

--- a/PokerPlanningDev/appsettings.Development.json
+++ b/PokerPlanningDev/appsettings.Development.json
@@ -4,5 +4,7 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "HangFireUser": "Jheymison",
+  "HangFirePassword": "jhey@jhey"
 }
