--- a/PokerPlanningDev/PokerPlanningDev.csproj
+++ b/PokerPlanningDev/PokerPlanningDev.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="Blazored.LocalStorage" Version="4.4.0" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.6" />
+    <PackageReference Include="Hangfire.Console" Version="1.4.2" />
+    <PackageReference Include="Hangfire.Dashboard.Basic.Authentication" Version="7.0.1" />
+    <PackageReference Include="Hangfire.InMemory" Version="0.6.0" />
     <PackageReference Include="MudBlazor" Version="6.11.0" />
   </ItemGroup>
 
